[gd_scene load_steps=4 format=3 uid="uid://clwoo0ksqnr71"]

[ext_resource type="Script" uid="uid://cfdene1me2dnu" path="res://scripts/GameController.gd" id="1_game_controller"]
[ext_resource type="PackedScene" path="res://scenes/MainMenu.tscn" id="2_main_menu"]
[ext_resource type="PackedScene" uid="uid://bklpfbydogsrm" path="res://scenes/Main.tscn" id="3_main_game"]

[node name="GameController" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_game_controller")

[node name="MainMenu" parent="." instance=ExtResource("2_main_menu")]
layout_mode = 1
grow_horizontal = 2
grow_vertical = 2

[node name="GameScene" parent="." instance=ExtResource("3_main_game")]
visible = false
